--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular2-prettyjson": "^2.0.6",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ngx-clipboard": "^9.1.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
