--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.2",
-    "@angular/cdk": "^5.1.0",
-    "@angular/common": "^5.2.2",
-    "@angular/compiler": "^5.2.2",
+    "@angular/cdk": "^5.1.1",
+    "@angular/common": "^5.2.3",
+    "@angular/compiler": "^5.2.3",
     "@angular/core": "^5.2.2",
     "@angular/flex-layout": "2.0.0-beta.12",
-    "@angular/forms": "^5.2.2",
-    "@angular/http": "^5.2.2",
-    "@angular/material": "^5.1.0",
-    "@angular/platform-browser": "^5.2.2",
-    "@angular/platform-browser-dynamic": "^5.2.2",
-    "@angular/router": "^5.2.2",
+    "@angular/forms": "^5.2.3",
+    "@angular/http": "^5.2.3",
+    "@angular/material": "^5.1.1",
+    "@angular/platform-browser": "^5.2.3",
+    "@angular/platform-browser-dynamic": "^5.2.3",
+    "@angular/router": "^5.2.3",
     "angular2-prettyjson": "^2.0.6",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
@@ -32,9 +32,9 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.6",
-    "@angular/compiler-cli": "^5.2.2",
-    "@angular/language-service": "^5.2.2",
+    "@angular/cli": "^1.6.7",
+    "@angular/compiler-cli": "^5.2.3",
+    "@angular/language-service": "^5.2.3",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
@@ -51,6 +51,6 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2",
-    "typescript-compiler": "^1.4.1-2"
+    "typescript-compiler": "^1.4.1"
   }
 }
