--- a/package.json
+++ b/package.json
@@ -12,45 +12,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.2",
-    "@angular/cdk": "^5.1.1",
-    "@angular/common": "^5.2.3",
-    "@angular/compiler": "^5.2.3",
-    "@angular/core": "^5.2.2",
-    "@angular/flex-layout": "2.0.0-beta.12",
-    "@angular/forms": "^5.2.3",
-    "@angular/http": "^5.2.3",
-    "@angular/material": "^5.1.1",
-    "@angular/platform-browser": "^5.2.3",
-    "@angular/platform-browser-dynamic": "^5.2.3",
-    "@angular/router": "^5.2.3",
+    "@angular/animations": "7.2.1",
+    "@angular/cdk": "^7.2.1",
+    "@angular/common": "7.2.1",
+    "@angular/compiler": "7.2.1",
+    "@angular/core": "7.2.1",
+    "@angular/flex-layout": "^7.0.0-beta.23",
+    "@angular/forms": "7.2.1",
+    "@angular/http": "7.2.1",
+    "@angular/material": "^7.2.1",
+    "@angular/platform-browser": "7.2.1",
+    "@angular/platform-browser-dynamic": "7.2.1",
+    "@angular/router": "7.2.1",
     "angular2-prettyjson": "^2.0.6",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
-    "ngx-clipboard": "^9.1.3",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "ngx-clipboard": "^11.1",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "^0.8.28"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.7",
-    "@angular/compiler-cli": "^5.2.3",
-    "@angular/language-service": "^5.2.3",
+    "@angular-devkit/build-angular": "~0.12.0",
+    "@angular/cli": "^7.2.2",
+    "@angular/compiler-cli": "7.2.1",
+    "@angular/language-service": "7.2.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.1",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2",
+    "typescript": "3.2.4",
     "typescript-compiler": "^1.4.1"
   }
 }
